--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,26 @@ font-family: 'Montserrat', ; */
 
 body {
   font-family: 'Montserrat', sans-serif;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
 }
 
 h1, h2, h3, h4, h5, h6, navbar-brand {
   font-family: 'Nunito', sans-serif;
+}
+
+
+.hero {
+  background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.4)), url(../images/dentist-picture.jpg);
+  height: 90vh;
+  background-size: cover;
+}
+
+.main-header {
+  font-size: 4rem;
+}
+
+.container {
+  text-align: center;
+  padding-top: 10em;
 }
