--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@ font-family: 'Montserrat', ; */
 body {
   font-family: 'Montserrat', sans-serif;
   color: white;
-  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);    /* Got this from https://css3gen.com/text-shadow/*/
+
 }
 
 h1, h2, h3, h4, h5, h6, navbar-brand {
   font-family: 'Nunito', sans-serif;
 }
 
-
+/* Used code from https://www.youtube.com/watch?v=9Yg3PWTgso4   */
 .hero {
   background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.4)), url(../images/dentist-picture.jpg);
   height: 90vh;
