--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ font-family: 'Montserrat', ; */
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: white;
   text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);    /* Got this from https://css3gen.com/text-shadow/*/
 
 }
@@ -15,12 +14,19 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
 /* Used code from https://www.youtube.com/watch?v=9Yg3PWTgso4   */
 .hero {
   background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.4)), url(../images/dentist-picture.jpg);
-  height: 90vh;
+  height: 80vh;
   background-size: cover;
 }
 
 .main-header {
   font-size: 4rem;
+  color: white;
+}
+
+/* SERVICES SECTION */
+.services-header {
+  text-align: center;
+  padding-top: 5em;
 }
 
 .container {
