--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
   font-family: 'Nunito', sans-serif;
 }
 
+.navbar {
+  background-color: #44D9E6;
+}
+
+.btn {
+  background-color: #1F6369;
+  color: white;
+}
 /* Used code from https://www.youtube.com/watch?v=9Yg3PWTgso4   */
 .hero {
   background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.4)), url(../images/dentist-picture.jpg);
@@ -30,6 +38,15 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
 }
 .services-cards {
   padding-bottom: 3em;
+}
+
+.icon-container {
+
+}
+
+.icons {
+  color: #0B7BFF;
+  margin: 5px;
 }
 
 .hero-content {
@@ -55,4 +72,12 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
 
 .testimonial-name {
   text-align: right;
+}
+/* FOOTER STYLES */
+footer .card {
+  border: none;
+}
+
+footer {
+  padding-top: 3em;
 }
