--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,22 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, navbar-brand {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .navbar {
   background-color: #44D9E6;
 }
 
+.navbar-brand {
+  width: 50px;
+  height: 50px;
+}
+
 .btn {
-  background-color: #1F6369;
+  background-color: #3EC6D2;
   color: white;
+  border: solid 2px #36AAB5;
 }
 /* Used code from https://www.youtube.com/watch?v=9Yg3PWTgso4   */
 .hero {
@@ -45,7 +51,7 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
 }
 
 .icons {
-  color: #0B7BFF;
+  color: #3EC6D2;
   margin: 5px;
 }
 
