--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
   padding-top: 12em;
 }
 
-  /* TESTIMONIALS HEADER */
+  /* TESTIMONIALS SECTION */
 .testimonials {
   background-color: #EFEFEF;
   padding-bottom: 3em;
@@ -86,6 +86,13 @@ h1, h2, h3, h4, h5, h6, navbar-brand {
 .testimonial-name {
   text-align: right;
 }
+
+/* CONTACTS SECTION */
+.contact-header {
+  text-align: center;
+  padding: 5em;
+}
+
 /* FOOTER STYLES */
 footer .card {
   border: none;
